# image_processing_algo

./: README.md
Ostu/: ostu_example.py
automaticColorEqualization/: ACE.cpp  CMakeLists.txt
chap3_image_transform+spatial_filter/chap3_2_gray_transform/: auto_contrast.py  contrast.py  invert.py  threshold.py
chap3_image_transform+spatial_filter/chap3_3_histogram/: hist.py  hist_match.py
chap3_image_transform+spatial_filter/chap3_4_spatial_filter/: LOG.py  LoG_DoG.md  conv_img.py  filter.py  laplace.py  prewitt.py  sobel.py
chap4_freq_filter/chap4_3_image_DFT/: fft1d.py  fft1d_2rd_implement.py  fft2d.py  freq_filter.py
chap4_freq_filter/chap4_x_image_DCT/: Reference_DCT.md  dct1d.py  dct2d.py  freq_filter_dct.py  higher-order_functions.py  use_yield.py
extract_contour/: CMakeLists.txt  canny_contour1.cpp  canny_contour2.cpp  hough_transform.cpp  note_CMake_usage.md
guide_filter/: guide_filter.md
harris_corner/: Corner_Detection.py  harris_corner_detector.md
morphology/: CMakeLists.txt  dilate_erode.cpp  note_morphology.md  open_close.cpp  open_extract_line.cpp
sift/: CMakeLists.txt  sift.cpp  sift.py  sift_match.py  surf.cpp
watershed/: watershed.txt
watershed/distance_transform/: distance_transform.md  distance_transform.txt
watershed/distance_transform/edt_cpp/: gmon.out  test
watershed/watershed/: watershed.py
